--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,16 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
   
   <link rel="stylesheet" href="mobile-screen.css" media="(max-width: 100px)" />
+
+  <link
+          href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
+          rel="stylesheet"
+        />
+        <link
+          href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
+          rel="stylesheet"
+        />
+        
 </head>
 
 <body>
