--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,12 @@
           href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
           rel="stylesheet"
         />
-        
 </head>
 
 <body>
 
   <div id="root"> </div>
-
+  <script src="https://accounts.google.com/gsi/client" async></script>
 </body>
 
 </html>
